Minor updates to handle List.of